# resume_job_fit_classification

./: Dockerfile  LICENSE  README.md  candidate  hr.py  predict.py  pyproject.toml  requirements.txt  resume_job_fit_classification.ipynb  resume_job_fit_classification2.ipynb  train.py  xgboost_final_resume_job_fit.ipynb
