[project]
name = "resume-job-fit-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dill>=0.4.0",
    "fastapi>=0.128.0",
    "joblib>=1.5.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "uvicorn[standard]>=0.40.0",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
